crates/nidus/tests/ui/openapi_outside_route_method.stderr
error: #[openapi] can only be used on route methods
 --> tests/ui/openapi_outside_route_method.rs:3:1
  |
3 | #[openapi(summary = "List users")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `openapi` (in Nightly builds, run with -Z macro-backtrace for more info)
