crates/nidus/tests/ui/openapi_outside_route_method.rs
use nidus::prelude::*;

#[openapi(summary = "List users")]
fn documented() {}

fn main() {}
